[package]
name = "tui-additions"
version = "0.1.2"
edition = "2021"
authors = ["Siriusmart <siriusmart@tuta.io>"]
description = "Additions to the Rust TUI crate"
readme = "README.md"
license = "GPL-3.0"
keywords = ["cli", "tui", "framework", "wrapper"]
categories =["command-line-interface"]
repository = "https://github.com/Siriusmart/tui-additions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = {version = "0.18", optional = true}
crossterm = {version = "0.24", optional = true}
typemap = {version = "0.3", optional = true}
dyn-clone = {version = "1.0", optional = true}

[features]
default = ["framework", "widgets"]
framework = ["dep:typemap", "dep:dyn-clone", "dep:crossterm", "dep:tui"]
widgets = ["dep:tui"]
