[package]
name = "tui-additions"
version = "0.4.1"
edition = "2021"
authors = ["Siriusmart <siriusmart@tuta.io>"]
description = "Additions to the Rust TUI crate"
readme = "README.md"
license = "GPL-3.0"
keywords = ["cli", "tui", "framework", "wrapper"]
categories =["command-line-interface"]
repository = "https://github.com/Siriusmart/tui-additions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = {version = "0.29", optional = true}
crossterm = {version = "0.29", optional = true}
typemap = {version = "0.3", optional = true}
dyn-clone = {version = "1.0", optional = true}
unicode-segmentation = {version = "1.9", optional = true}
# tokio = {version = "1.21", optional = true}
# async-trait = {version = "0.1", optional = true}

[features]
default = ["framework", "widgets"]
# async = ["dep:tokio", "dep:async-trait"]
framework = ["dep:typemap", "dep:dyn-clone", "dep:crossterm", "dep:ratatui"]
widgets = ["dep:ratatui", "dep:unicode-segmentation"]
