[package]
name = "framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui-additions = { path = "../../", default-features = false, features = ["framework", "widgets"]}
ratatui = "0.28"
typemap = "0.3"
crossterm = "0.28"
